home revision small devices fix

--- a/dev/html/sass/sections/_home.scss
+++ b/dev/html/sass/sections/_home.scss
@@ -92,6 +92,7 @@
     min-height: 100%;
   }
 }
+
 #home {
   padding: 0;
   margin: -83px 0 0;
@@ -163,6 +164,38 @@
     }
   }
 }
+
+@include max-screen(480px) {
+  html .home {
+    #home-video,
+    #home,
+    .videoHolder {
+      height: 480px !important;
+      width: 100%;
+    }
+    #home-video {
+      position: absolute !important;
+      .videoHolder video {
+        display: none;
+      }
+    }
+    #home .txt {
+      height: 55%;
+      h1 {
+        @include font-size(28);
+        @include line-height(28);
+      }
+      .button.left {
+        margin: 0 auto 16px;
+      }
+    }
+    #home .btn-down, 
+    #home .btn-down:active {
+      display: none;
+    }
+  }
+}
+
 .section-work {
   background: url(../images/layout/bg-path.png);
   color: #333;
